@@ -2,13 +2,13 @@
 
 package com.yahoo.vespa.model.container.xml;
 
+import com.yahoo.collections.Pair;
 import com.yahoo.config.application.api.ApplicationPackage;
 import com.yahoo.config.model.NullConfigModelRegistry;
 import com.yahoo.config.model.builder.xml.test.DomBuilderTest;
 import com.yahoo.config.model.deploy.DeployState;
 import com.yahoo.config.model.deploy.TestProperties;
 import com.yahoo.config.model.test.MockApplicationPackage;
-
 import com.yahoo.search.config.QrStartConfig;
 import com.yahoo.vespa.model.VespaModel;
 import com.yahoo.vespa.model.container.ContainerCluster;
@@ -17,10 +17,15 @@ import org.w3c.dom.Element;
 import org.xml.sax.SAXException;
 
 import java.io.IOException;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.logging.Level;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 
 /**
  * @author baldersheim
@@ -140,6 +145,121 @@ public class JvmOptionsTest extends ContainerModelBuilderTestBase {
         verifyJvmGCOptions(false, null, "-XX:+UseG1GC", "-XX:+UseG1GC");
         verifyJvmGCOptions(false, "-XX:+UseParallelGC", "-XX:+UseG1GC", "-XX:+UseG1GC");
         verifyJvmGCOptions(false, null, "-XX:+UseParallelGC", "-XX:+UseParallelGC");
+    }
+
+    @Test
+    public void requireThatInvalidJvmGcOptionsAreLogged() throws IOException, SAXException {
+        verifyLoggingOfJvmGcOptions(true,
+                                    "-XX:+ParallelGCThreads=8 foo     bar",
+                                    "foo", "bar");
+        verifyLoggingOfJvmGcOptions(true,
+                                    "-XX:+UseCMSInitiatingOccupancyOnly foo     bar",
+                                    "-XX:+UseCMSInitiatingOccupancyOnly", "foo", "bar");
+        verifyLoggingOfJvmGcOptions(true,
+                                    "-XX:+UseConcMarkSweepGC",
+                                    "-XX:+UseConcMarkSweepGC");
+        verifyLoggingOfJvmGcOptions(true,
+                                    "$(touch /tmp/hello-from-gc-options)",
+                                    "$(touch", "/tmp/hello-from-gc-options)");
+
+        verifyLoggingOfJvmGcOptions(false,
+                                    "$(touch /tmp/hello-from-gc-options)",
+                                    "$(touch", "/tmp/hello-from-gc-options)");
+
+        // Valid options, should not log anything
+        verifyLoggingOfJvmGcOptions(true, "-XX:+ParallelGCThreads=8");
+        verifyLoggingOfJvmGcOptions(true, "-XX:MaxTenuringThreshold"); // No + or - after colon
+        verifyLoggingOfJvmGcOptions(false, "-XX:+UseConcMarkSweepGC");
+    }
+
+    @Test
+    public void requireThatInvalidJvmGcOptionsFailDeployment() throws IOException, SAXException {
+        try {
+            buildModelWithJvmOptions(new TestProperties().setHostedVespa(true).failDeploymentWithInvalidJvmOptions(true),
+                    new TestLogger(),
+                    "gc-options",
+                    "-XX:+ParallelGCThreads=8 foo     bar");
+            fail();
+        } catch (IllegalArgumentException e) {
+            assertTrue(e.getMessage().contains("Invalid JVM GC options in services.xml: bar,foo"));
+        }
+    }
+
+    private void verifyLoggingOfJvmGcOptions(boolean isHosted, String override, String... invalidOptions) throws IOException, SAXException  {
+        verifyLoggingOfJvmOptions(isHosted, "gc-options", override, invalidOptions);
+    }
+
+    private void verifyLoggingOfJvmOptions(boolean isHosted, String optionName, String override, String... invalidOptions) throws IOException, SAXException  {
+        TestLogger logger = new TestLogger();
+        buildModelWithJvmOptions(isHosted, logger, optionName, override);
+
+        List<String> strings = Arrays.asList(invalidOptions.clone());
+        // Verify that nothing is logged if there are no invalid options
+        if (strings.isEmpty()) {
+            assertEquals(0, logger.msgs.size());
+            return;
+        }
+
+        Collections.sort(strings);
+        Pair<Level, String> firstOption = logger.msgs.get(0);
+        assertEquals(Level.WARNING, firstOption.getFirst());
+        assertEquals("Invalid JVM " + (optionName.equals("gc-options") ? "GC " : "") +
+                             "options in services.xml: " + String.join(",", strings), firstOption.getSecond());
+    }
+
+    private void buildModelWithJvmOptions(boolean isHosted, TestLogger logger, String optionName, String override) throws IOException, SAXException {
+        buildModelWithJvmOptions(new TestProperties().setHostedVespa(isHosted), logger, optionName, override);
+    }
+
+    private void buildModelWithJvmOptions(TestProperties properties, TestLogger logger, String optionName, String override) throws IOException, SAXException {
+        String servicesXml =
+                "<container version='1.0'>" +
+                        "  <nodes>" +
+                        "    <jvm " + optionName + "='" + override + "'/>" +
+                        "    <node hostalias='mockhost'/>" +
+                        "  </nodes>" +
+                        "</container>";
+        ApplicationPackage app = new MockApplicationPackage.Builder().withServices(servicesXml).build();
+        new VespaModel(new NullConfigModelRegistry(), new DeployState.Builder()
+                .applicationPackage(app)
+                .deployLogger(logger)
+                .properties(properties)
+                .build());
+    }
+
+    @Test
+    public void requireThatJvmOptionsAreLogged()  throws IOException, SAXException {
+        verifyLoggingOfJvmOptions(true,
+                                  "options",
+                                  "-Xms2G foo     bar",
+                                  "foo", "bar");
+        verifyLoggingOfJvmOptions(true,
+                                  "options",
+                                  "$(touch /tmp/hello-from-gc-options)",
+                                  "$(touch", "/tmp/hello-from-gc-options)");
+
+        verifyLoggingOfJvmOptions(false,
+                                  "options",
+                                  "$(touch /tmp/hello-from-gc-options)",
+                                  "$(touch", "/tmp/hello-from-gc-options)");
+
+        // Valid options, should not log anything
+        verifyLoggingOfJvmOptions(true, "options", "-Xms2G");
+        verifyLoggingOfJvmOptions(true, "options", "-verbose:gc");
+        verifyLoggingOfJvmOptions(false, "options", "-Xms2G");
+    }
+
+    @Test
+    public void requireThatInvalidJvmOptionsFailDeployment() throws IOException, SAXException {
+        try {
+            buildModelWithJvmOptions(new TestProperties().setHostedVespa(true).failDeploymentWithInvalidJvmOptions(true),
+                                     new TestLogger(),
+                                     "options",
+                                     "-Xms2G foo     bar");
+            fail();
+        } catch (IllegalArgumentException e) {
+            assertTrue(e.getMessage().contains("Invalid JVM options in services.xml: bar,foo"));
+        }
     }
 
 }
